<resources>
    <string name="app_name">NoteIT</string>
    <string name="my_notes">My Notes</string>
    <string name="search_here">Search here....</string>
    <string name="clear">clear</string>
    <string name="no_data">no_data</string>
    <string name="add_note">Add Note</string>
    <string name="choose_color">Choose Color</string>
    <string name="some_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus tristique elit a neque hendrerit, a cursus libero hendrerit. In molestie id nunc nec faucibus. In et facilisis enim. Proin aliquet arcu eget tellus feugiat, eu convallis mi malesuada. Curabitur quis turpis quam. Morbi et malesuada lorem, at vestibulum orci. Aenean.
    </string>
    <string name="edited_on">Edited on: %1$s</string>
    <string name="back_button">Back button</string>
    <string name="edit_note">Last edit: </string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="color_palette_button">Color palette button</string>
    <string name="note_title">Note Title</string>
    <string name="bar">bar</string>
    <string name="this_is_a_title">Note Title</string>
    <string name="add_note_button">Add note button</string>
    <string name="date_format">DD-MM-YY</string>
    <string name="add_photo_button">Add photo button</string>
</resources>