<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/noteContentFragmentParent"
    tools:context=".fragments.SaveOrDeleteFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/toolbarFragmentNoteContent">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/back_button"
            android:focusable="true"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:src="@drawable/ic_round_arrow_back_24"
            tools:ignore="TouchTargetSizeCheck">
        </ImageView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lastEdited"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:ellipsize="end"
            android:fontFamily="@font/ubuntu_regular"
            android:paddingStart="13dp"
            android:paddingTop="5dp"
            android:paddingEnd="13dp"
            android:paddingBottom="5dp"
            android:text="@string/edit_note"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold">
        </com.google.android.material.textview.MaterialTextView>
        <ImageView
            android:id="@+id/saveNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:paddingBottom="5dp"
            android:src="@drawable/ic_baseline_save_24"
            tools:ignore="TouchTargetSizeCheck"
            app:tint="@color/black"
            android:contentDescription="@string/title">

        </ImageView>
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarFragmentNoteContent">


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView"
            android:fillViewport="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:background="@null"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/etTitle"
                    android:inputType="none"
                    android:textSize="22sp"
                    android:importantForAutofill="no"
                    android:fontFamily="@font/ubuntu_medium"
                    android:hint="@string/note_title">
                </EditText>

                <com.yahiaangelo.markdownedittext.MarkdownEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginEnd="22dp"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:fontFamily="@font/ubuntu_regular"
                    android:hint="@string/note"
                    android:importantForAutofill="no"
                    android:padding="10dp"
                    android:textSize="16sp"
                    android:id="@+id/etNoteContent">
                </com.yahiaangelo.markdownedittext.MarkdownEditText>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fabColorPick"
            android:layout_margin="15dp"
            android:backgroundTint="@color/darkPurple"
            android:layout_gravity="bottom|end"
            android:src="@drawable/ic_baseline_color_lens_24"
            android:contentDescription="@string/color_palette_button">
        </com.google.android.material.floatingactionbutton.FloatingActionButton>
    </FrameLayout>

    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/bottomBar"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp"
        android:layout_alignParentBottom="true">
        <com.yahiaangelo.markdownedittext.MarkdownStylesBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/styleBar"
            android:layout_margin="10dp"
            android:elevation="5dp"
            android:padding="5dp">
        </com.yahiaangelo.markdownedittext.MarkdownStylesBar>
    </LinearLayout>


</RelativeLayout>