<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/noteItemLayoutParent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="5dp"
            app:cardCornerRadius="13dp"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/noteFirstDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="2dp"
                    android:background="@drawable/fab_btn_corner"
                    android:drawablePadding="6dp"
                    android:drawableTint="@color/black"
                    android:ellipsize="end"
                    android:fontFamily="@font/ubuntu_regular"
                    android:padding="5dp"
                    android:text="@string/date_format"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="12sp">
                </com.google.android.material.textview.MaterialTextView>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/noteItemTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="25dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/ubuntu_medium"
                    android:padding="5dp"
                    android:text="@string/this_is_a_title"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold">
                </com.google.android.material.textview.MaterialTextView>

                <TextView
                    android:id="@+id/noteContentItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/noteItemTitle"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="3dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/ubuntu_medium"
                    android:maxLines="12"
                    android:padding="5dp"
                    android:text="@string/some_text"
                    android:textSize="14sp">
                </TextView>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/noteEditeDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/noteContentItem"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="2dp"
                    android:background="@drawable/fab_btn_corner2"
                    android:drawablePadding="6dp"
                    android:drawableTint="@color/black"
                    android:ellipsize="end"
                    android:fontFamily="@font/ubuntu_regular"
                    android:padding="5dp"
                    android:text="@string/date_format"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="12sp">
                </com.google.android.material.textview.MaterialTextView>

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>
</layout>